@@ -186,6 +186,7 @@ $conf->domains[$i]->quota_type = 'STORAGE';
 //  7 = Attachment
 //  8 = Priority Text
 //  9 = Priority Number
+// 10 = Flagged
 $conf->column_order = array('6', '1', '7', '2', '3', '4', '5');
 
 // Master key for session password encryption. Longer is better.
