@@ -97,9 +97,10 @@ if ($pop->is_imap()) {
                                     case '5': $column_title = $html_size; break;
                                     case '6': $column_title = ''; break;
                                     case '7': $column_title = ''; break;
-                                    //TODO: Make "Priority" column sortable!
+                                    //TODO: Make "Priority" and "Flagged" columns sortable!
                                     case '8': $column_title = ''; break;
                                     case '9': $column_title = ''; break;
+                                    case '10': $column_title = ''; break;
                                 }
                                 echo '<th class="column'.$column; if ($_SESSION['nocc_sort'] == $column) echo ' sorted'; echo '">';
                                 if ($column_title != '') { //If we have a column title...
@@ -117,6 +118,9 @@ if ($pop->is_imap()) {
                                     }
                                     elseif ($column == '9') { //If "Priority Number" column...
                                         echo '<span title="' . $html_priority . '">!</span>';
+                                    }
+                                    elseif ($column == '10') { //If "Flagged" column...
+                                        echo '<span title="' . $html_flagged . '">*</span>';
                                     }
                                 }
                                 echo '</th>';
